--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
         <footer class="text-center mt-5">
             <p>&copy; 2025 Sheero's Hub. All rights reserved.</p>
             <p>Do not come without treats to meet Sheero! 🦴</p>
+            <p>Images generated in Ghibli style by ChatGPT.</p>
         </footer>
     </div>
 
